Working version without storing capability
Calendar works
next season starts with table reset and ageing players

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <h1>IDLE SOCCER</h1>
-
+<div id="headLine">HeadLine----------</div>
 <div id="mainMenu">MainMenu----------</div>
 <div id="game">Resources-------------</div>
 
