--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
 	  
 	   <li class="nav-item dropdown">
         <div class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Data
+          Statistics
         </div>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		  <div class="dropdown-item" onmouseup="mUp(this)" id="switchToStatistics">Statistics</div>
-          <div class="dropdown-item" onmouseup="mUp(this)" id="switchToLeagueview">Leagues</div>
+		  <div class="dropdown-item" onmouseup="mUp(this)" id="switchToLeagueview">League Tables</div>
+		  <div class="dropdown-item" onmouseup="mUp(this)" id="switchToGameDays">Game Days</div>
+          
         </div>
       </li>
     </ul>
